update to version 2.6.0
* update code and dependencies
* add build script